crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@invalid_type_struct.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "// Make this type recursive to check that the `is_erroneous` check on types does not loop forever\nstruct Foo { inner: []Foo }\n\nfn main() {\n\tlet a: I32 = Foo { inner: arrayOfZeros(0) }\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/invalid_type_struct.au
---
Error: Type mismatch
   ╭─[ main:5:15 ]
   │
 5 │     let a: I32 = Foo { inner: arrayOfZeros(0) }
   │                  ───────────────┬──────────────  
   │                                 ╰──────────────── Expected `I32`, but got `struct Foo`
───╯
